// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Property propertySearch [presets: perPage 3] by postcode wildcard 1`] = `
[
  {
    "address": "dd3c8e0d34ac3fd9dadc294e96ccd1cfa00e599a",
    "postcode": {
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-04-25",
      },
    ],
  },
  {
    "address": "dea9c5dd93a7c61fa0bcebb9ea9f2814846203d1",
    "postcode": {
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-04-26",
      },
    ],
  },
  {
    "address": "45c7a465a6da7fc33b9d4577cacafa53e849dda6",
    "postcode": {
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-03-25",
      },
    ],
  },
]
`;

exports[`GraphQL: Property propertySearch [presets: perPage 3] by postcode wildcard: 2nd page 1`] = `
[
  {
    "address": "8b7de6d263024ec9713f5279e13aadee8d07f7c8",
    "postcode": {
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2022-09-16",
      },
    ],
  },
  {
    "address": "77ef51b9253e7978202b37dc46113366bcddaa14",
    "postcode": {
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2022-06-06",
      },
    ],
  },
  {
    "address": "abceb3e60dc1a7d71b9756bf1ddb58de20cd5002",
    "postcode": {
      "postcode": "E20 1AE",
    },
    "transactions": [
      {
        "date": "2017-11-10",
      },
    ],
  },
]
`;

exports[`GraphQL: Property propertySearchInRange [presets: perPage 2] by coordinates, in kilometers 1`] = `
[
  {
    "address": "dd3c8e0d34ac3fd9dadc294e96ccd1cfa00e599a",
    "postcode": {
      "lat": 51.548136,
      "lng": -0.007724,
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-04-25",
      },
    ],
  },
  {
    "address": "dea9c5dd93a7c61fa0bcebb9ea9f2814846203d1",
    "postcode": {
      "lat": 51.548136,
      "lng": -0.007724,
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-04-26",
      },
    ],
  },
  {
    "address": "45c7a465a6da7fc33b9d4577cacafa53e849dda6",
    "postcode": {
      "lat": 51.548136,
      "lng": -0.007724,
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-03-25",
      },
    ],
  },
]
`;

exports[`GraphQL: Property propertySearchInRange [presets: perPage 2] by coordinates, in miles 1`] = `
[
  {
    "address": "dd3c8e0d34ac3fd9dadc294e96ccd1cfa00e599a",
    "postcode": {
      "lat": 51.548136,
      "lng": -0.007724,
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-04-25",
      },
    ],
  },
  {
    "address": "dea9c5dd93a7c61fa0bcebb9ea9f2814846203d1",
    "postcode": {
      "lat": 51.548136,
      "lng": -0.007724,
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-04-26",
      },
    ],
  },
]
`;

exports[`GraphQL: Property propertySearchInRange [presets: perPage 2] by coordinates, in miles: 2nd page 1`] = `
[
  {
    "address": "45c7a465a6da7fc33b9d4577cacafa53e849dda6",
    "postcode": {
      "lat": 51.548136,
      "lng": -0.007724,
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2019-03-25",
      },
    ],
  },
  {
    "address": "8b7de6d263024ec9713f5279e13aadee8d07f7c8",
    "postcode": {
      "lat": 51.548136,
      "lng": -0.007724,
      "postcode": "E20 1AB",
    },
    "transactions": [
      {
        "date": "2022-09-16",
      },
    ],
  },
]
`;
